# flow-visualizer

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml  rectified_flow_config.yaml
examples/: rectified_flow_demo.py
outputs/models/: adjoint_config.yaml
outputs/rectified_flow/: config.yaml
src/adjoint_matching/: __init__.py  train.py  visualize.py
src/adjoint_matching/conf/: config.yaml
src/cfg/: __init__.py  data.py  flow_gaussians.py  loss.py  model.py  rectified_cfgpp.py  train.py  train_rectified.py  visualize.py  visualize_rectified_cfgpp.py
src/cfg/conf/: config.yaml  config_overlap.yaml
src/flow_gaussians/: __init__.py  data.py  model.py  sampling.py  train.py  visualize.py  visualize_rectified_cfg.py
src/flow_gaussians/conf/: config.yaml  config_multimodal.yaml  config_non_overlapping.yaml
src/flow_visualizer/: __init__.py  data.py  loss.py  model.py  train.py  train_rectified_flow.py  visualize.py  visualize_rectified_flow.py
src/flow_visualizer/conf/: config.yaml
src/rectified_flow/: __init__.py  train.py  visualize.py
src/rectified_flow/conf/: config.yaml
tests/: __init__.py  test_visualize.py
